2001-04-15  Martin Baulig  <baulig@suse.de>

	* gnome-program.[ch]: Removed; this is now in libgnomebase/libgnomebase.

	* gnome-defs.h, gnome-i18n.h: Removed; this is now in libgnomebase/libgnomebase.

	* gnome-i18nP.h: Moved all the external declarations from gnome-i18n.h here.

	* gnome-portability.h.in: Removed; this is now in libgnomebase/libgnomebase.

2001-04-14  Martin Baulig  <baulig@suse.de>

	* gnome-program.h (GNOME_PARAM_GCONF_CLIENT): New GnomeProgram property.
	(gnome_program_get_gconf_client): New convenience function to return the
	GnomeProgram's GNOME_PARAM_GCONF_CLIENT property.

	* gnome-program.c (gnome_program_get_property): Fixed a typo to make this
	actually work.

	* libgnome-init.c (gnome_gconf_constructor): New constructor function to
	install the GnomeProgram's GNOME_PARAM_GCONF_CLIENT property.
	(gnome_gconf_get_property, gnome_gconf_post_args_parse): Implement that
	property; when creating a new GnomeProgram instance we set its
	GNOME_PARAM_GCONF_CLIENT property to gnome_conf_client_get_default().

2001-04-13  Martin Baulig  <baulig@suse.de>

	* libgnome-init.c (gnome_oaf_module_info, gnome_gconf_module_info):
	Provide GnomeModuleInfo structs for OAF and GConf.
	(libgnome_module_requirements): Depend on OAF and GConf.

2001-04-13  Martin Baulig  <baulig@suse.de>

	* libgnome-2.0.pc.in: Added @LIBGNOME_EXTRA_DEPS@ to the Requires:.

2001-04-12  Martin Baulig  <baulig@suse.de>

	* gnome-program.h (GnomeModuleHook): The `GnomeModuleInfo' argument
	is deep-copied, so you can actually modify it.

2001-04-12  Martin Baulig  <baulig@suse.de>

	* libgnome.h (libgnome_module_info): Added external declaration.

	* gnomelib-init.c: Renamed to libgnome-init.c.

	* gnomelib-init.h: Removed.

2001-04-11  Martin Baulig  <baulig@suse.de>

	* gnome-util.h (gnome_libdir_file, gnome_datadir_file,
	gnome_sound_file, gnome_pixmap_file, gnome_config_file,
	gnome_help_file, gnome_app_help_file): Removed.
	(gnome_unconditional_*_file): Removed.
