@@ -1,5 +1,9 @@
 2001-04-15  Martin Baulig  <baulig@suse.de>
 
+	* libgnome-2.0.pc.in: Depend on libgnomebase-2.
+
+2001-04-15  Martin Baulig  <baulig@suse.de>
+
 	* gnome-program.[ch]: Removed; this is now in libgnomebase/libgnomebase.
 
 	* gnome-defs.h, gnome-i18n.h: Removed; this is now in libgnomebase/libgnomebase.
